# rpminspect

./: .packit.yaml  .pre-commit-config.yaml  README.md  TODO.FILESMATCH  meson.build  rpminspect.pc.in  rpminspect.spec.in  run-against-rhivos-srpms.sh  sync-filesmatch-results.sh
.copr/: Makefile
.github/workflows/: freebsd.yml  netbsd.yml
data/: generic.dson  generic.json  generic.yaml
include/: constants.h  init.h  inspect.h  mofile.h  readelf.h  results.h  rpminspect.h  types.h
lib/: abi.cxx  abspath.cxx  array.cxx  badwords.cxx  builds.c  builds.cxx  checksums.cxx  curl.c  curl.cxx  debug.c  delta.cxx  deprules.cxx  diags.c  diags.cxx  files.c  files.cxx  free.c  init.c  init.cxx  inspect.c  inspect_abidiff.c  inspect_abidiff.cxx  inspect_annocheck.c  inspect_arch.cxx  inspect_changedfiles.c  inspect_changedfiles.cxx  inspect_changelog.cxx  inspect_debuginfo.c  inspect_desktop.c  inspect_disttag.c  inspect_dsodeps.cxx  inspect_elf.cxx  inspect_filesmatch.c  inspect_kmidiff.c  inspect_kmidiff.cxx  inspect_license.c  inspect_license.cxx  inspect_lto.c  inspect_lto.cxx  inspect_patches.c  (+31 more)
libtoml/: meson.build
libxdiff/: meson.build  xdiff.h  xdiffi.cxx  xemit.cxx  xhistogram.cxx  xmerge.cxx  xpatience.cxx  xprepare.cxx  xutils.cxx
osdeps/arch/: post.sh  reqs.txt
osdeps/freebsd/: post.sh  reqs.txt
osdeps/netbsd/: defs.mk  post.sh  reqs.txt
osdeps/opensuse-leap/: defs.mk
osdeps/ubuntu/: post.sh  reqs.txt
po/: rpminspect.pot
src/: meson.build
test/: meson.build
utils/: srpm.sh
